--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>HelloCodeSchoolProject - Hubley</test>
   </head>
   <body>
-This is a test
+<h1>Hello, Code School!</h1>
+<ul>
+  <li>MongoDB</li>
+  <li>ExpressJS</li>
+</ul>
   </body>
 </html>
